# shader-guide

./: .gitmodules  CMakeLists.txt  build.bat  build.sh  readme.md
libraries/glad/: CMakeLists.txt
libraries/glad/include/glad/: glad.h
libraries/glad/src/: glad.c
shaders/: color_fragment_shader.glsl  color_vertex_shader.glsl
src/: shader_guide.c  shg_camera.c  shg_camera.h  shg_ogl_wrapper.c  shg_ogl_wrapper.h  shg_utils.c  shg_utils.h
